bug 590349 - Clipboard (copy/paste) support for Android r=mwu a=blocking-fennec=2.0+